--- a/BA_argo_doc/anhang.tex
+++ b/BA_argo_doc/anhang.tex
@@ -1,4 +1,8 @@
-\section{Anhang}
+\printglossary
+\printglossary[type=\acronymtype]
+\pagebreak
+\addsec{Anhang}
+
 
 \section*{Resultate}
 
@@ -180,7 +184,3 @@ plt.legend(handles=[
 ])
 plt.show()
 \end{python}
-
-
-\pagebreak
-\printglossaries
