--- a/BA_argo_doc/glossar.tex
+++ b/BA_argo_doc/glossar.tex
@@ -7,7 +7,7 @@
 \newacronym{netCDF}{netCDF}{Network Common Data Format}
 \newacronym{DBMS}{DBMS}{Datenbank-Management-System}
 \newacronym{ORM}{ORM}{Objektrelationaler Mapper}
-\newacronym{KISS}{KISS}{Keep it simple, stupid}
+\newacronym{KISS}{KISS}{Keep It Simple, Stupid}
 
 
 \newglossaryentry{Controller}{%
