--- a/BA_argo_doc/systementwurf.tex
+++ b/BA_argo_doc/systementwurf.tex
@@ -39,13 +39,13 @@ Die Datenaggregation erfüllt zwei Funktionen. Zum einen muss sichergestellt sei
 
 Auch in diesem Modell ist die Ereigniskette aus (\ref{eq:datenstruktur}) abzubilden. Jede Messstation wird über ein Objekt abgebildet. Die hier gespeicherten Daten sind für eine Messstation eindeutig. Jeder Messzyklus der Boje wird über ein weiteres, zur Messstation gehöriges Objekt abgebildet. Dieses ist innerhalb des Kontextes eindeutig und trägt die Informationen zur jeweiligen Messung.
 
-Für die Persistierung  werden objektorientierte Strukturen für den \gls{ORM} verwendet. Diese Strukturen teilt sich das Modul mit der Webapplikation. Die Behandlung der Daten sowie eine Steuerung des Prozesses sind als weitere Schnittstellen zu definieren.
+Für die Persistierung  der objektorientierten Strukturen wird ein \gls{ORM} verwendet. Die Datensrtrukturen teilt sich das Aggregationsmodul mit der Webapplikation. Die Behandlung der Daten sowie eine Steuerung des Prozesses sind als weitere Schnittstellen zu definieren.
 
 Wie in Abbildung \ref{fig:grobetwurf_architektur_datenaggregation} ersichtlich ist, wird die Aggregation der Daten über zwei Teilbereiche abgebildet. Zum einen müssen die benötigten Parameter aus den Dateien ausgelesen und modelliert werden.
 Als zweite Ebene der Aggregation ist der Prozess des Schreibens in eine Datenbank zu sehen. Diese verwendet die zuvor ermittelten modellierten Messprofile und schreibt sie anhand der dort enthaltenen Daten in eine Datenbank.
 
 
-Es ist an dieser Stelle zu erkennen, dass zwei Stellen existieren, die die intrinsischen Eigenschaften des Modules an dieser Stelle beeinflussen. Im folgenden werden die Schnittstellen aufgelistet, die eine richtige Handhabung festsetzen:
+Es ist an dieser Stelle zu erkennen, dass zwei Stellen existieren, die die intrinsischen Eigenschaften des Modules an dieser Stelle beeinflussen. Im Folgenden werden die Schnittstellen aufgelistet, die eine richtige Handhabung festsetzen:
 
 \pagebreak
 \paragraph{Schnittstellen}
@@ -73,7 +73,7 @@ Es ist an dieser Stelle zu erkennen, dass zwei Stellen existieren, die die intri
 
 \subsubsection{Entwurf der Webapplikation}
 
-Die Webapplikation besteht aus zwei Teilkomponenten. Die erste Komponente ist für die Darstellung der Webseite zuständig (app). Durch diese werden Elemente in  HTML, Javascript und als Bilder ausgeliefert, welche im Webbrowser den Benutzenden angezeigt werden können. Die Darstellung erfolgt dabei dem Singlepage-Prinzip.
+Die Webapplikation besteht aus zwei Teilkomponenten. Die erste Komponente ist für die Darstellung der Webseite zuständig (APP). Durch diese werden Elemente in  HTML, Javascript und als Bilder ausgeliefert, welche im Webbrowser den Benutzenden angezeigt werden können. Die Darstellung erfolgt dabei dem Singlepage-Prinzip.
 
 Die zweite Teilkomponente ist dafür zuständig, benötigten Daten bereitzustellen (\gls{api}). Alle Daten aus der Datenhaltung werden über diese Schnittstelle angefordert. Die Daten werden über JSON codiert.
 
@@ -81,7 +81,7 @@ Die zweite Teilkomponente ist dafür zuständig, benötigten Daten bereitzustell
 \subsubsection{Ausarbeitung der Webrouten} \label{sec:entwurfRoutes}
 
 
-Die \textbf{\gls{api}} ist dafür zuständig, die benötigten Daten der Applikation bereitzustellen. Über definierte Webrouten wird über einen GET-Request ein JSON angefordert. Die  hierfür ausgearbeitete Struktur ist in Listing \ref{lst:routesAPI} zu sehen und ist im Folgenden beschrieben:
+Die \gls{api} ist dafür zuständig, die benötigten Daten der Applikation bereitzustellen. Über definierte Webrouten wird über einen GET-Request ein JSON angefordert. Die  hierfür ausgearbeitete Struktur ist in Listing \ref{lst:routesAPI} zu sehen und ist im Folgenden beschrieben:
 
 \begin{python}[label={lst:routesAPI}, caption={Webrouten der Datenrepresentation}]
 (1.1) GET     /last_seen
@@ -95,7 +95,7 @@ Die \textbf{\gls{api}} ist dafür zuständig, die benötigten Daten der Applikat
     Über diese Route  werden die Daten für die letzte Position der Messstationen aufgerufen. Dieser Datensatz trägt die Daten, die zur Anzeige der Positionen der Messstationen auf der Weltkarte benötigt werden und die Zusatzinformationen zur Darstellung eines Tooltips der einzelnen Argo-Floats. Die Daten werden bei jedem Besuch der Webseite ausgeliefert. Da sich diese erst verändern, wenn neue Daten vorliegen, werden diese über einen Caching-Mechanismus vorgehalten. Der optionale Übergabeparameter \texttt{force\_reload} ermöglicht das Neuanlegen des Caches. Um Vandalismus vorzubeugen, sollte es sich dabei um einen nicht zu  erratenden Token handeln.
 
  \item [(1.3)]
-    Über diese Route werden die Mess-, wie auch Metadaten einer Messstation angefordert. Die Auswahl der Boje erfolgt über den Übergabeparameter \texttt{identifier}. Hier wird die eindeutige Identifikationsnummer  (siehe PLATTFORM\-\_NUMBER in Tabelle \ref{table:Datenauswahl}) der Messstation verwendet.
+    Über diese Route werden Mess-, wie auch  Metadaten einer Messstation angefordert. Die Auswahl der Boje erfolgt über den Übergabeparameter \texttt{identifier}. Hier wird die eindeutige Identifikationsnummer  (siehe PLATTFORM\-\_NUMBER in Tabelle \ref{table:Datenauswahl}) der Messstation verwendet.
 
  \item [(1.4)]
     Um den Positionsverlauf einer Boje anzufordern, dient diese Route. Auch hier wird zur Identifikation der Messstation deren Identifikationsnummer als Parameter übergeben.
@@ -103,7 +103,7 @@ Die \textbf{\gls{api}} ist dafür zuständig, die benötigten Daten der Applikat
 
 
 
-Die \textbf{app} liefert die Teile aus, die vom Benutzer gesehen werden. Es handelt sich dabei um HTML/Javascript und Bilddaten. Die hierfür ausgearbeitete Struktur ist in Listing \ref{lst:routesAPP} zu sehen und im Folgenden beschrieben:
+Die APP liefert die Teile aus, die vom Benutzer gesehen werden. Es handelt sich dabei um HTML/Javascript und Bilddaten. Die hierfür ausgearbeitete Struktur ist in Listing \ref{lst:routesAPP} zu sehen und im Folgenden beschrieben:
 
 \begin{python}[label={lst:routesAPP}, caption={Webrouten der Darstellung}]
 (2.1) GET     /
