--- a/BA_argo_doc/testphase.tex
+++ b/BA_argo_doc/testphase.tex
@@ -126,7 +126,7 @@ So long and thanks for all the fish.
 
 \begin{description}
  \item [Daten herunterladen]
-    Die Daten des Argo-Programms werden heruntergeladen. Es handelt sich um die Livedaten nach der Qualitätskontrolle aus der Quelle \texttt{aoml}. Für das herunterladen wird rsync verwendet. In der Quelle nicht mehr vorhandene Daten werden gelöscht.
+    Die Daten des Argo-Programms werden heruntergeladen. Es handelt sich um die Livedaten nach der Qualitätskontrolle aus der Quelle \texttt{aoml}. Für das Herunterladen wird rsync verwendet. In der Quelle nicht mehr vorhandene Daten werden gelöscht.
 
 
  \item [Daten aggregieren]
@@ -150,7 +150,7 @@ So long and thanks for all the fish.
 \subsubsection{Testaufbau}
 
 Um die Usability der Webapplikation zu testen, wurde eine Umfrage durchgeführt. Als Grundlage diente der System Usability Scale (SUS).
-Für diese Umfrage waren insgesamt 10 Fragen innerhalb einer Scala von 1 (gar nicht) bis 5 (sehr)  zu bewerten. (vgl. \cite{Quantita52:online})
+Für diese Umfrage waren insgesamt 10 Fragen innerhalb einer Skala von 1 (gar nicht) bis 5 (sehr)  zu bewerten (vgl. \cite{Quantita52:online}).
 
 An der Umfrage nahmen insgesamt 12 Personen teil. Diese setzen sich aus Bekannten- und Kollegenkreis zusammen. Die Daten wurden anonym erhoben, ein Rückschluss auf die Personen ist damit nicht mehr möglich.
 
@@ -171,33 +171,33 @@ Im Folgenden findet sich eine detaillierte Auswertung der hier erhobenen Daten:
 
 
 \paragraph{\texttt{Statement 1:} "`Ich kann mir gut vorstellen, ArgoData regelmäßig zu nutzen."'}
-    Diese Frage zielt auf die Wiederbesuchsbereitschaft ab. Die Antworten weisen eine breite Streuung auf. Die am häufigsten gegebene Antwort liegt bei 4 (4 von 12 Personen). Der Median liegt bei 3, das arithmetische Mittel befindet sich bei $2.67$. Die Box umfasst die Antworten 2 bis 4. Der Whisker schließt Antwort 1 mit ein.
+    Diese Frage zielt auf die Wiederbesuchsbereitschaft ab. Die Antworten weisen eine breite Streuung auf. Die am häufigsten gegebene Antwort liegt bei $4$ (4 von 12 Personen). Der Median liegt bei $3$, das arithmetische Mittel befindet sich bei $2.67$. Die Box umfasst die Antworten 2 bis 4. Der Whisker schließt Antwort 1 mit ein.
 
  \paragraph{\texttt{Statement 2:} "`Ich empfinde ArgoData als unnötig komplex."'}
-    In dieser Frage, bildet sich die Reduktion der Komplexität ab.
-    Die am häufigsten gegebene Antwort liegt bei 1 (7 von 12 Personen).  Der Median liegt bei 1, das arithmetische Mittel bei $1.67$. Die Box umfasst die Antworten 1 bis 2. Der Whisker schließt Antwort 3 mit ein.
+    In dieser Frage bildet sich die Reduktion der Komplexität ab.
+    Die am häufigsten gegebene Antwort liegt bei $1$ (7 von 12 Personen).  Der Median liegt bei $1$, das arithmetische Mittel bei $1.67$. Die Box umfasst die Antworten 1 bis 2. Der Whisker schließt Antwort $3$ mit ein.
 
   \paragraph{\texttt{Statement 3:} "`Ich empfinde ArgoData als einfach zu nutzen."'}
-    Durch diese Frage wird die Einfachheit der Darstellung und die Reduktion der Benutzungskomplexität abgebildet. Die am häufigsten gegebene Antwort liegt bei 5 (6 von 12 Personen). Der Median liegt bei $4.5$, das arithmetische Mittel bei $4.25$   Die Box umfasst Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
+    Durch diese Frage wird die Einfachheit der Darstellung und die Reduktion der Benutzungskomplexität abgebildet. Die am häufigsten gegebene Antwort liegt bei $5$ (6 von 12 Personen). Der Median liegt bei $4.5$, das arithmetische Mittel bei $4.25$   Die Box umfasst Antworten $4$ und $5$. Der Whisker schließt Antwort $3$ mit ein.
 
 \paragraph{\texttt{Statement 4:} "`Ich denke, dass ich Hilfestellung bei der Benutzung brauchen würde um ArgoData zu benutzen."'}
-    Diese Frage ermittelt ob genügend Hilfestellung zur Verfügung gestellt wurde.  Die am häufigsten gegebene Antworten liegen bei 1 und 3 (jeweils 4 von 12 Personen).  Der Median liegt bei 2.5, das arithmetische Mittel liegt bei $2.33$. Die Box umfasst Antworten 1 bis 3, der Whisker schließt Antwort 4 mit ein.
+    Diese Frage ermittelt ob genügend Hilfestellung zur Verfügung gestellt wurde.  Die am häufigsten gegebene Antworten liegen bei $1$ und $3$ (jeweils 4 von 12 Personen).  Der Median liegt bei $2.5$, das arithmetische Mittel liegt bei $2.33$. Die Box umfasst Antworten $1$ bis $3$, der Whisker schließt Antwort $4$ mit ein.
 
 \paragraph{\texttt{Statement 5:} "`Ich finde, dass die Funktionen (Karte, Steuerung, Anzeige von Daten) gut integriert sind."'}
     Diese Frage ermittelt die Integration der Steuerungselemente.
-    Die am häufigsten gegebene Antwort liegt bei 4 (6 von 12 Personen). Der Median liegt bei 4, das arithmetische Mittel bei $4.33$. Die Box umfasst  die Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
+    Die am häufigsten gegebene Antwort liegt bei $4$ (6 von 12 Personen). Der Median liegt bei $4$, das arithmetische Mittel bei $4.33$. Die Box umfasst  die Antworten $4$ und $5$. Der Whisker schließt Antwort $3$ mit ein.
 
 \paragraph{\texttt{Statement 6:} "`Ich finde, dass es in ArgoData zu viele Inkonsistenzen gibt."'}
-    Diese Frage zielt auf die Integration der Komponenten als Gesamtkonzept ab. Die am häufigsten gegebene Antwort liegt bei Antwort 2 (5 von 12 Personen). Der Median liegt bei 2, das arithmetische Mittel bei $2.08$. Die Box umfasst Antworten 2 und 3. Der Whisker schließt Antwort 1 mit ein.
+    Diese Frage zielt auf die Integration der Komponenten als Gesamtkonzept ab. Die am häufigsten gegebene Antwort liegt bei Antwort $2$ (5 von 12 Personen). Der Median liegt bei $2$, das arithmetische Mittel bei $2.08$. Die Box umfasst Antworten $2$ und $3$. Der Whisker schließt Antwort $1$ mit ein.
 
 \paragraph{\texttt{Statement 7:} "`Ich kann mir vorstellen, dass die meisten Leute ArgoData schnell zu beherrschen lernen."'}
-    Diese Frage versucht über eine externe Perspektive die Lernkurve bei der Benutzung abzufragen.Die am häufigsten gegebene Antwort liegt bei 5 (6 von 12 Personen). Der Median liegt bei 4.5, das arithmetische Mittel bei $4.42$. Die Box umfasst die Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
+    Diese Frage versucht über eine externe Perspektive die Lernkurve bei der Benutzung abzufragen.Die am häufigsten gegebene Antwort liegt bei $5$ (6 von 12 Personen). Der Median liegt bei $4.5$, das arithmetische Mittel bei $4.42$. Die Box umfasst die Antworten $4$ und $5$. Der Whisker schließt Antwort $3$ mit ein.
 
 \paragraph{\texttt{Statement 8:} "`Ich empfinde die Bedienung als sehr umständlich."'}
-    Diese Frage versucht das Erleben des Bedienungskonzeptes zu erfragen. Die am häufigsten gegebene Antwort liegt bei 2 (7 von 12 Personen). Der Median liegt bei 2, das arithmetische Mittel bei $1.75$ Die Box umfasst die Antworten 1 und 2. Der Whisker schließt Antwort 3 mit ein.
+    Diese Frage versucht das Erleben des Bedienungskonzeptes zu erfragen. Die am häufigsten gegebene Antwort liegt bei $2$ (7 von 12 Personen). Der Median liegt bei $2$, das arithmetische Mittel bei $1.75$ Die Box umfasst die Antworten $1$ und $2$. Der Whisker schließt Antwort $3$ mit ein.
 
 \paragraph{\texttt{Statement 9:} "`Ich musste eine Menge Dinge lernen, bevor ich mit ArgoData arbeiten konnte."'}
-    Diese Frage ermittelt die Lernkurve die zur Benutzung notwendig ist. Die am häufigsten gegebene Antwort ist die 1 (9 von 12 Personen). Der Median liegt bei Antwort 1, das arithmetische Mittel bei $1.5$. Die Box umfasst Antwort 1, der Whisker schließt keine weiteren Antworten mit ein, diese sind damit als Ausreißer zu betrachten.
+    Diese Frage ermittelt die Lernkurve die zur Benutzung notwendig ist. Die am häufigsten gegebene Antwort ist die $1$ (9 von 12 Personen). Der Median liegt bei Antwort $1$, das arithmetische Mittel bei $1.5$. Die Box umfasst Antwort $1$, der Whisker schließt keine weiteren Antworten mit ein, diese sind damit als Ausreißer zu betrachten.
 
 \subsubsection{Interpretation der Ergebnisse}
 Die Antworten sind durchwegs als positiv zu betrachten. Die Fragen zur Komplexität lassen erkennen, dass es gelungen ist, die wissenschaftlichen Daten ohne Vorkenntnisse verstehbar darzustellen. Die Bedienungsmuster wurden angenommen und als konsistent und wenig umständlich beschrieben. Die Frage zur Wiederbesuchsbereitschaft weist eine starke Streuung auf. Da es sich um eine Seite mit einem Bildungsangebot handelt, ist dies erklärbar.
