--- a/BA_argo_doc/BA_ArgoFloats_main.tex
+++ b/BA_argo_doc/BA_ArgoFloats_main.tex
@@ -14,7 +14,7 @@
 \glsresetall
 \pagenumbering{roman}
 \pagestyle{plain}
-%\setcounter{page}{-1}
+\setcounter{page}{-1}
 \bibliographystyle{alpha}
 \include{titlepage}
 \newpage
@@ -38,7 +38,7 @@
 \include{testphase}
 \include{auswertung}
 \pagebreak
-\pagestyle{plain}\pagenumbering{roman}\setcounter{page}{8}
+\pagestyle{plain}\pagenumbering{roman}\setcounter{page}{6}
 \input{literatur}
 \pagebreak
 
